# template-django-restapi

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml
api/: settings.py
core/: manage.py
core/api/: asgi.py  settings.py  wsgi.py
core/api/configurations/: base.py  database.py
src/: manage.py
src/api/: asgi.py  settings.py  urls.py  wsgi.py
src/api/configurations/: base.py  database.py
src/apps/core/: admin.py  models.py  views.py
src/apps/core/migrations/: 0001_initial.py
src/apps/core/serializers/: user_serializer.py
